--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mattangelolim.github.io/website",
+  "homepage": "https://mattangelolim.github.io/webApp",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
